Camera Clip Overlay enables itself without doing anything #61411

Closed
opened 2019-02-11 12:40:59 +01:00 by Lukas Wieg · 7 comments

System Information
Operating system: Windows
Graphics card: GTX 970

Blender Version

version: 2.80 (sub 43), branch: blender2.7, commit date: 2019-02-06 23:09, hash: a5869c367e, type: Release
build date: 06/02/2019, 18:12
platform: Windows

Short description of error

The Camera Clip Checkbox is enabled when the Panel of the Background Image is opened, even when I unchecked the Checkbox and open the panel again.

Exact steps for others to reproduce the error
In Camera Settings:

  • add a Background Image
  • Change type to Movie Clip
  • Uncheck the Camera Clip Checkbox
  • add a movie clip
  • Minimize / Close the Background Settings
  • Reopen the Settings
**System Information** Operating system: Windows Graphics card: GTX 970 **Blender Version** version: 2.80 (sub 43), branch: blender2.7, commit date: 2019-02-06 23:09, hash: a5869c367e66, type: Release build date: 06/02/2019, 18:12 platform: Windows **Short description of error** The Camera Clip Checkbox is enabled when the Panel of the Background Image is opened, even when I unchecked the Checkbox and open the panel again. **Exact steps for others to reproduce the error** In Camera Settings: - add a Background Image - Change type to Movie Clip - Uncheck the Camera Clip Checkbox - add a movie clip - Minimize / Close the Background Settings - Reopen the Settings
Author

Added subscriber: @LukasWieg

Added subscriber: @LukasWieg
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-02-11 14:40:09 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

@ideasman42 : not sure why this was done in ef96f36ee9?
D4335 removes this (so that Camera Clip is not enabled along with show_expanded...)

@ideasman42 : not sure why this was done in ef96f36ee9? [D4335](https://archive.blender.org/developer/D4335) removes this (so that `Camera Clip` is not enabled along with `show_expanded`...)

This issue was referenced by 2424bb3d5e

This issue was referenced by 2424bb3d5ef38702bb738431ab05bd4575374e96

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61411
No description provided.