Fix T61411: Camera clip overlay enabled by expanding UI